NATTQA-ENV/force-app/main/default/objects/Opportunity_Scheduled_Pick_Date__c/Opportunity_Scheduled_Pick_Date__c.object-meta.xml
<CustomObject>
    <label>Opportunity Requested Ship Date</label>
    <nameField>
        <displayFormat>OSPD-{0000}</displayFormat>
        <label>Opportunity Requested Ship Date Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Requested Ship Dates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>