NATTQA-ENV/force-app/main/default/objects/Opportunity_Scheduled_Pick_Date__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Opportunity_Scheduled_Pick_Dates</relationshipName>
    <type>Lookup</type>
</CustomField>