NATTQA-ENV/force-app/main/default/objects/Opportunity_Scheduled_Pick_Date__c/fields/Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date__c</fullName>
    <label>Requested Ship Date</label>
    <type>Date</type>
</CustomField>