NATTQA-ENV/force-app/main/default/objects/Opportunity_Scheduled_Pick_Date__c/fields/Scheduled_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Quantity__c</fullName>
    <label>Requested Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>