NATTQA-ENV/force-app/main/default/objects/Opportunity_Scheduled_Pick_Date__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forecasted</fullName>
                <default>true</default>
                <label>Forecasted</label>
            </value>
            <value>
                <fullName>Actual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>